# mongodb-backuper

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tasks.yaml
command/: database_backup.py  database_connection.py  database_restore.py
commands/: database_backup.py  database_restore.py
database/: client.py
gui/: backup_view.py  main_frame.py  restore_view.py
tests/: test_backup_view.py  test_main.py  test_main_frame.py
tests/commands/: test_db_client.py
tests/gui/: test_restore_view.py
window/: backup_view.py  main_frame.py  restore_view.py
